Sharding of libspotify through WCF and IPC and what not now works! Yay! The REST should be pretty straight forward stuff ;)
Nasty WCF threading issue, the errors had absolutely nothing to do with the service. It just not possible to issue new WCF requests using the thread context of an existing WCF request. See usage of ThreadContext.Invoke for work around.

--- a/Restify.Server/Content/stylesheet.css
+++ b/Restify.Server/Content/stylesheet.css
@@ -29,4 +29,19 @@ h1 > .subtitle { font-size: 11pt; line-height: 11pt; color: gray; margin-top: 0;
 }
 
 ul.form { list-style: none; margin: 0; padding: 0; }
-ul.form > li > input { border: 1px solid gray; border-radius: 2px; }
+ul.form > li 
+{
+    line-height: 1.5em;
+}
+ul.form > li > input 
+{ 
+    border: 1px solid gray; 
+    border-left-color: #aaa; 
+    border-bottom-color: #ccc; 
+    border-right-color: #ccc; 
+    border-radius: 2px; 
+    line-height: 1.5em;
+    height: 1.5em;
+}
+
+input[type=text], input[type=password] { width: 180px; }
