--- a/Restify.Server/Content/stylesheet.css
+++ b/Restify.Server/Content/stylesheet.css
@@ -3,6 +3,7 @@
     background: #fff url(spotify-core-logo-128x128.png) no-repeat fixed right bottom;
     font-family: "Segoe UI";
     font-size: 11pt;
+    margin-right: 160px;
 }
 
 a { color: #cf5521; }
@@ -36,6 +37,7 @@ h1 > .subtitle { font-size: 11pt; line-height: 11pt; color: gray; margin-top: 0;
     border: solid 1px #ccc;
     border-radius: 3px;
     padding: 16px;
+    background-color: #fcfcfc;
 }
 
 ul.form { list-style: none; margin: 0; padding: 0; }
@@ -56,5 +58,43 @@ ul.form > li > input
 
 input[type=text], input[type=password] { width: 180px; }
 
+#search 
+{
+}
+
+#search-textbox 
+{
+    border: 1px solid gray; 
+    border-left-color: #aaa; 
+    border-bottom-color: #ccc; 
+    border-right-color: #ccc; 
+    border-radius: 2px; 
+    line-height: 1.5em;
+    height: 1.75em;
+    font-size: 12pt;
+    width: 300px;
+    padding: 0 30px;
+    background: #fcfcfc url(spotify-search-20x20.png) no-repeat 5px 4px;
+}
+
 #playlists { float: left; }
+
 #tracks { float: left; }
+
+table.tracks > tbody > tr
+{
+    font-size: 11pt;
+}
+
+table.tracks > thead > tr > th
+{
+    font-size: 9pt;
+    font-weight: normal;
+    text-align: left;
+    border-bottom: 1px solid gray;
+    color: #999;
+}
+
+td.track-length { width: 55px; text-align: center; }
+
+.enqueue { font-size: 9pt; }
